Fix blockquote width on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -475,6 +475,12 @@ hr {
         border-left: 2px solid hsla(0, 0%, 10%, 1.0);
         margin-left: 1em;
         padding-left: 1em;
+
+        @media screen and (max-width: 1100px) {
+            width: 90vw;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 
     > dl {
